<resources>
    <string name="app_name">Bangun Datar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="TV_SatuanNilai">cm</string>
    <string name="TV_SatuanNilai_Pangkat2">cm2</string>
    <string name="Button_Hitung">HITUNG</string>
    <string name="Button_Ringkasan">RINGKASAN</string>
    <string name="Button_Reset">RESET</string>
    <string name="Button_Kembali">KEMBALI</string>
    <string name="Button_LihatGambar">DETAIL</string>
    <string name="Button_Rumus">LIHAT RUMUS</string>
    <string name="TextTitikDua">:</string>
    <string name="TV_PilihModeCari">Pilih Unit Yang Ingin Dihitung :</string>
	<string name="AngkaNol">0</string>
    <string name="AngkaSatu">1</string>
    <string name="AngkaDua">2</string>
    <string name="AngkaTiga">3</string>
    <string name="AngkaEmpat">4</string>
    <string name="AngkaLima">5</string>
    <string name="AngkaEnam">6</string>
    <string name="AngkaTujuh">7</string>
    <string name="AngkaDelapan">8</string>
    <string name="AngkaSembilan">9</string>
    <string name="AngkaSepuluh">10</string>
    <string name="AngkaSebelas">11</string>
    <string name="AngkaDuaBelas">12</string>
    <string name="AngkaTigaBelas">13</string>
    <string name="AngkaEmpatBelas">14</string>
    <string name="AngkaLimaBelas">15</string>
    <string name="AngkaEnamBelas">16</string>
    <string name="AngkaTujuhBelas">17</string>
    <string name="AngkaDelapanBelas">18</string>
    <string name="AngkaSembilanBelas">19</string>
    <string name="AngkaDuaPuluh">20</string>
    <string name="TakTerhingga">Tak Terhingga</string>
    <string name="TidakAda">Tidak Ada</string>
    <string name="ImageView_TampilanUtama"></string>
    <string name="TextView_TampilanUtama">Penghitung Rumus Bangun Datar</string>
    <string name="TextView_TampilanUtama2">Untuk Pembelajaran Matematika</string>
    <string name="TextView_TampilanUtama3">BANGUN DATAR v1.0</string>
    <string name="TextView_ButtonMulaiHitung">Mulai Hitung</string>
    <string name="TextView_ButtonLihatRumus">Lihat Rumus</string>
    <string name="TextView_ButtonRingkasan">Ringkasan</string>
    <string name="TextView_ButtonTentang">Tentang</string>
    <string name="TextView_ButtonPengaturan">Pengaturan</string>
    <string name="TextView_ButtonKeluar">Keluar</string>
    <string name="ButtonBujurSangkar">Bujur Sangkar</string>
    <string name="ButtonPersegiPanjang">Persegi Panjang</string>
    <string name="ButtonSegitiga">Segitiga</string>
    <string name="ButtonBelahKetupat">Belah Ketupat</string>
    <string name="ButtonJajarGenjang">Jajar Genjang</string>
    <string name="ButtonLayangLayang">Layang-Layang</string>
    <string name="ButtonLingkaran">Lingkaran</string>
    <string name="ButtonTrapesium">Trapesium</string>
    <string name="ButtonSegilima">Segilima</string>
    <string name="ButtonSegienam">Segienam</string>
    <string name="ButtonElips">Elips</string>
    <string name="ButtonKembali">Kembali</string>
    <string name="TV_Judul_PP">PERSEGI PANJANG</string>
    <string name="TV_SubJudul_PP_MC_Semua">Mode Cari : Semua Unit</string>
    <string name="TV_SubJudul_PP_MC_Diagonal">Mode Cari : Hanya Diagonal</string>
    <string name="TV_SubJudul_PP_MC_Panjang">Mode Cari : Hanya Panjang</string>
    <string name="TV_SubJudul_PP_MC_Lebar">Mode Cari : Hanya Lebar</string>
    <string name="Button_MC_Semua">Semua Unit</string>
    <string name="Button_MC_HanyaDiagonal">Hanya Diagonal</string>
    <string name="Button_MC_HanyaLebar">Hanya Lebar</string>
    <string name="Button_MC_HanyaPanjang">Hanya Panjang</string>
    <string name="TV_Input_BS_S_MC_Semua">Sisi [s] :</string>
    <string name="IV_BujurSangkar">Bujur Sangkar</string>
    <string name="TV_Output_BS_Luas_MC_Semua">LUAS :</string>
    <string name="TV_Output_BS_Keliling_MC_Semua">KELILING :</string>
    <string name="TV_Output_BS_D_MC_Semua">DIAGONAL [d] :</string>
    <string name="TV_Judul_BS">BUJUR SANGKAR / PERSEGI</string>
    <string name="TV_PilihModeCari_BS">Pilih Unit Yang Ingin Dihitung :</string>
    <string name="IV_BS">Gambar Bujur Sangkar. Unit Penghitungan Lihat pada parameter berdasarkan Gambar.</string>
    <string name="Button_MC_Semua_BS">Semua Unit</string>
    <string name="Button_MC_HS_BS">Hanya Sisi [s]</string>
    <string name="LH_GambarBujurSangkar">Bujur Sangkar</string>
    <string name="TV_SubJudul_BS_MC_Semua">Mode Cari : Semua Unit</string>
    <string name="TV_SubJudul_BS_MC_HS">Mode Cari : Hanya Sisi [s]</string>
    <string name="TV_Input_BS_L_MC_HS">Luas :</string>
    <string name="TV_Output_BS_Sisi_MC_HS">SISI [s] :</string>
    <string name="TV_Input_PP_Panjang">Nilai Panjang (p) :</string>
    <string name="TV_Input_PP_Lebar">Nilai Lebar (l) :</string>
    <string name="TV_Input_PP_Luas">Nilai Luas :</string>
    <string name="TV_Output_PP_Luas">LUAS</string>
    <string name="TV_Output_PP_Keliling">KELILING</string>
    <string name="TV_Output_PP_Diagonal">DIAGONAL (d)</string>
    <string name="TV_Output_PP_Lebar">LEBAR (l) :</string>
    <string name="TV_Output_PP_Panjang">PANJANG (p) :</string>
    <string name="IV_PP">Gambar Persegi Panjang</string>
    <string name="LH_GambarPersegiPanjang">Lihat Gambar Persegi Panjang</string>
    <string name="TV_Judul_S">SEGITIGA</string>
    <string name="TV_SubJudul_S">Pilih Jenis Segitiga :</string>
    <string name="Button_SegitigaSamaKaki_Pilihan">Segitiga Sama Kaki</string>
    <string name="Button_SegitigaSamaSisi_Pilihan">Segitiga Sama Sisi</string>
    <string name="Button_SegitigaSembarang_Pilihan">Segitiga Sembarang</string>
    <string name="Button_SegitigaSikuSiku_Pilihan">Segitiga Siku-Siku</string>
    <string name="TV_Judul_S_SamaKaki">Segitiga Sama Kaki</string>
    <string name="TV_LR_Judul_S_SamaKaki">SEGITIGA SAMAKAKI</string>
    <string name="TV_Judul_S_SamaSisi">Segitiga Sama Sisi</string>
    <string name="TV_LR_Judul_S_SamaSisi">SEGITIGA SAMA SISI</string>
    <string name="TV_Judul_S_Sembarang">Segitiga Sembarang</string>
    <string name="TV_LR_Judul_S_Sembarang">SEGITIGA SEMBARANG</string>
    <string name="Button_MC_Semua_S_SamaKaki">Semua Unit</string>
    <string name="Button_MC_Semua_S_SamaSisi">Semua Unit</string>
    <string name="Button_MC_Semua_S_Sembarang">Semua Unit</string>
    <string name="Button_MC_HanyaSisi_S_SamaKaki">Hanya Sisi</string>
    <string name="Button_MC_HanyaAlas_S_SamaKaki">Hanya Alas</string>
    <string name="Button_MC_HanyaTinggi_S_SamaKaki">Hanya Tinggi</string>
    <string name="Button_MC_HanyaTinggi_S_SamaSisi">Hanya Tinggi</string>
    <string name="TV_SubJudul_S_SamaKaki_MC_Semua">Mode Cari : Semua Unit</string>
    <string name="TV_SubJudul_S_SamaKaki_MC_HanyaSisi">Mode Cari : Hanya Sisi</string>
    <string name="TV_SubJudul_S_SamaKaki_MC_HanyaAlas">Mode Cari : Hanya Alas</string>
    <string name="TV_SubJudul_S_SamaKaki_MC_HanyaTinggi">Mode Cari : Hanya Tinggi</string>
    <string name="TV_SubJudul_S_SamaSisi_MC_Semua">Mode Cari : Semua Unit</string>
    <string name="TV_SubJudul_S_SamaSisi_MC_HanyaTinggi">Mode Cari : Hanya Tinggi</string>
    <string name="TV_SubJudul_S_Sembarang_MC_Semua">Mode Cari : Semua Unit</string>
    <string name="TV_Input_S_SamaKaki_Alas_MC_Semua">Nilai Alas (a) :</string>
	<string name="TV_Input_S_SamaKaki_Alas_MC_HanyaSisi">Nilai Alas (a) :</string>
	<string name="TV_Input_S_SamaKaki_Tinggi_MC_HanyaSisi">Nilai Tinggi (t) :</string>
    <string name="TV_Input_S_SamaKaki_Tinggi_MC_Semua">Nilai Tinggi (t) :</string>
    <string name="TV_Input_S_SamaKaki_Sisi_MC_Semua">Nilai Sisi (s) :</string>
    <string name="TV_Input_S_SamaKaki_Luas_MC_HanyaAlas">Nilai Luas (L) :</string>
    <string name="TV_Input_S_SamaKaki_Tinggi_MC_HanyaAlas">Nilai Tinggi (t) :</string>
    <string name="TV_Input_S_SamaKaki_Luas_MC_HanyaTinggi">Nilai Luas (L) :</string>
    <string name="TV_Input_S_SamaKaki_Alas_MC_HanyaTinggi">Nilai Alas (a) :</string>
    <string name="TV_Input_S_SamaSisi_SisiAtauAlas_MC_Semua">Nilai Sisi (s) atau Alas (a) :</string>
    <string name="TV_Input_S_SamaSisi_Tinggi_MC_Semua">Nilai Tinggi (t) :</string>
    <string name="TV_Output_S_SamaSisi_Luas_MC_Semua">LUAS (L)</string>
    <string name="TV_Output_S_SamaSisi_Keliling_MC_Semua">KELILING (K)</string>
    <string name="TV_Output_S_SamaSisi_SetengahAlas_MC_Semua">1/2 ALAS</string>
    <string name="TV_Output_S_SamaKaki_Alas_MC_HanyaAlas">ALAS (a) :</string>
    <string name="TV_Output_S_SamaKaki_Luas_MC_Semua">LUAS</string>
    <string name="TV_Output_S_SamaKaki_Keliling_MC_Semua">KELILING</string>
    <string name="TV_Output_S_SamaKaki_SetengahAlas_MC_Semua">1/2 ALAS</string>
    <string name="TV_Output_S_SamaKaki_SetengahAlas_MC_HanyaAlas">1/2 ALAS :</string>
    <string name="TV_Output_S_SamaKaki_Sisi_MC_HanyaSisi">SISI :</string>
    <string name="TV_Output_S_SamaKaki_Tinggi_MC_HanyaTinggi">TINGGI (t) :</string>
    <string name="TV_Input_S_SamaSisi_SisiAtauAlas_MC_HanyaTinggi">Nilai Sisi (s) atau Alas (a) :</string>
    <string name="TV_Output_S_SamaSisi_Tinggi_MC_HanyaTinggi">TINGGI (t) :</string>
    <string name="TV_Input_S_SamaSisi_Luas_MC_HanyaTinggi">Luas (L) :</string>
    <string name="LH_GambarSegitiga_SamaKaki">Segitiga Sama Kaki</string>
    <string name="Button_MC_HanyaSisiA_S_Sembarang">Hanya Sisi A (a)</string>
    <string name="Button_MC_HanyaSisiB_S_Sembarang">Hanya Sisi B (b)</string>
    <string name="Button_MC_HanyaTinggi_S_Sembarang">Tinggi (t)</string>
    <string name="IV_SegitigaSembarang">Gambar Segitiga Sembarang</string>
    <string name="TV_Input_S_Sembarang_SisiA_MC_Semua">Nilai Sisi A</string>
    <string name="TV_Input_S_Sembarang_SisiB_MC_Semua">Nilai Sisi B</string>
    <string name="TV_Input_S_Sembarang_SisiC_MC_Semua">Nilai Sisi C</string>
    <string name="TV_Input_S_Sembarang_Tinggi_MC_Semua">Nilai Tinggi (t)</string>
    <string name="TV_Output_S_Sembarang_Luas_MC_Semua">LUAS</string>
    <string name="TV_Output_S_Sembarang_Keliling_MC_Semua">KELILING</string>
    <string name="TV_Output_S_Sembarang_SetengahAlas_MC_Semua">1/2 ALAS</string>
    <string name="IV_Gambar_Segitiga_Sembarang_MC_Semua">Gambar Segitiga Sembarang (Lihat point satuan nilai.)</string>
    <string name="TV_SubJudul_S_Sembarang_MC_HS_A">Mode Cari : Hanya Sisi A</string>
    <string name="IV_Gambar_Segitiga_Sembarang_MC_HS_A">Gambar Segitiga Sembarang (Lihat point satuan nilai.)</string>
    <string name="IV_Gambar_Segitiga_Sembarang_MC_HS_B">Gambar Segitiga Sembarang (Lihat point satuan nilai.)</string>
    <string name="TV_Input_S_Sembarang_SisiB_MC_HS_A">Nilai Sisi B (b)</string>
    <string name="TV_Input_S_Sembarang_Tinggi_MC_HS_A">Nilai Tinggi (t)</string>
    <string name="TV_Output_S_Sembarang_SisiA_MC_HS_A">Nilai Sisi A (a)</string>
    <string name="TV_SubJudul_S_Sembarang_MC_HS_B">Mode Cari : Hanya Sisi B</string>
    <string name="TV_Input_S_Sembarang_SisiA_MC_HS_B">Nilai Sisi A (a)</string>
    <string name="TV_Input_S_Sembarang_Tinggi_MC_HS_B">Nilai Tinggi (t)</string>
    <string name="TV_Output_S_Sembarang_SisiB_MC_HS_B">Nilai Sisi B (b)</string>
    <string name="TV_SubJudul_S_Sembarang_MC_HanyaTinggi">Mode Cari : Hanya Tinggi</string>
	<string name="TV_Judul_Lingkaran">LINGKARAN</string>
    <string name="TV_Input_TSKu_Luas_MC_HSA">Luas : </string>
    <string name="TV_Input_TSKu_T_MC_HSA">Tinggi [t] : </string>
    <string name="TV_Input_TSKu_SB_MC_HSA">Sisi Bawah [sb] : </string>
    <string name="TV_Output_TSKu_SA_MC_HSA">SISI ATAS [sa] : </string>
    <string name="TV_SL">Simetri Lipat</string>
    <string name="TV_SP">Simetri Putar</string>
    <string name="TV_SS">Sumbu Simetri</string>
    <string name="TV_TS">Titik Sudut</string>
    <string name="TV_JS">Jumlah Sisi</string>
    <string name="GR">Garis_Lurus</string>
    <string name="TV_R">Rumus :</string>
    <string name="TV_KT">Keterangan :</string>
</resources>